fixed mobile alignmnt in user-login

--- a/user/css/auth.css
+++ b/user/css/auth.css
@@ -44,16 +44,13 @@ body {
   margin: 10px;
   border-radius: 6px;
   background: none;
+  color: #ffffff;
   cursor: pointer;
 }
 
 .register .button:hover {
-  background: #613;
-}
-
-.register .create_account {
-  color: #fbf5de;
-  text-decoration: none;
+  color: #ffffff;
+  background: #013220;
 }
 
 .login_links {
@@ -64,7 +61,7 @@ body {
 }
 
 .login_links a:hover {
-  color: #613;
+  color: #013220;
 }
 
 .links {
@@ -78,5 +75,5 @@ body {
 }
 
 .footer a:hover {
-  color: #613;
+  color: #013220;
 }
